# unit-system-generator

./: .gitignore  Doxyfile  Pipfile  README.md  genSources.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: arduino.yaml  cpp17.yaml  cppDesktop.yaml  main.yaml  meson.yaml  pio.yaml  push_releases.yaml  python.yaml  release.yaml
doc/: Ci_and_tests.md  targets.md  type_formats.md
generator_code/: combination.py  target.py  unit.py  utils.py
generator_code/targets/: arduino.json  cargo.json  cppDesktop.json  meson.json  python.json
generators/: arduino.py  combination.py  meson.py  specials.py  target.py  targets.py  unit.py  utils.py
generators/Cpp17/: meson.py  specials.py  unit.py
generators/Cpp17/meson/: meson.build.template
generators/Cpp17/per_unit/: unit.cpp.template  unit.hpp.template
generators/Cpp17/templates/: unit.cpp.template  unit.hpp.template  unit_type.hpp.template  units.hpp.template
generators/arduino/: library.properties.template
generators/embedded/: arduino.py  specials.py  unit.py
generators/embedded/per_unit/: unit.cpp.template
generators/embedded/templates/: combinations.cpp.template  combinations.hpp.template  std_implements.hpp.template  unit.cpp.template  unit.hpp.template  units.hpp.template
generators/meson parts/: meson.build.template
generators/meson/tests/: base_units_test.cpp
generators/python/generic/: prefixes.py  unit_system.py.template
generators/python/python/: prefixes.py
generators/python/templates/: pyproject.toml  unit_system.py
generators/targets/: arduino.json  meson.json  python.json
generators/templates/: combinations.cpp.template  header.template  header_combine.template  meson.build.template  source.template  source_combine.template  std_implements.hpp.template  unit.cpp.template  unit.hpp.template  unit_type.hpp.template  unit_type.template  units.hpp.template  units.template
target_data/Cpp/arduino/: library.properties.template
target_data/Cpp/generic/: unit_system.template_local
target_data/Cpp/meson/: meson.build.template  meson_options.txt
target_data/Cpp/meson/tests/: meson.build  unit_test.cpp
target_data/Cpp/per_unit/: unit.cpp.template
target_data/Cpp17/per_unit/: unit.cpp.template
target_data/embedded/per_unit/: unit.cpp.template
type data/: combinations.json  constants.json  units.json
(+46 files in other folders)
